--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@react-pdf-viewer/core": "^3.8.0",
+    "@react-pdf/renderer": "^3.0.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
@@ -21,13 +23,16 @@
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
     "next": "13.0.4",
-    "react": "18.2.0",
+    "pdfjs-dist": "^3.0.279",
+    "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "18.2.0",
+    "react-pdf": "^6.1.0",
     "typescript": "4.9.3"
   },
   "devDependencies": {
     "@types/react-anchor-link-smooth-scroll": "^1.0.2",
+    "@types/react-pdf": "^5.7.4",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4"
