--- a/package.json
+++ b/package.json
@@ -14,21 +14,22 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@react-pdf-viewer/core": "^3.8.0",
-    "@react-pdf/renderer": "^3.0.1",
+    "@sendgrid/mail": "^7.7.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "babel-plugin-macros": "^3.1.0",
     "eslint": "8.28.0",
     "eslint-config-next": "13.0.4",
+    "formik": "^2.2.9",
     "next": "13.0.4",
     "pdfjs-dist": "^3.0.279",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "18.2.0",
-    "react-pdf": "^6.1.0",
-    "typescript": "4.9.3"
+    "react-hot-toast": "^2.4.0",
+    "typescript": "4.9.3",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/react-anchor-link-smooth-scroll": "^1.0.2",
